--- a/tms-next-abp/package.json
+++ b/tms-next-abp/package.json
@@ -9,7 +9,8 @@
         "docker": "turbo prune --scope=abp-react --docker",
         "generate": "plop",
         "gen-api": "openapi --input https://localhost:44383/swagger/v1/swagger.json --output ./packages/proxy/src --client axios process.env.NODE_TLS_REJECT_UNAUTHORIZED='0' ",
-        "test:codegen": "pnpm exec playwright codegen"
+        "test:codegen": "pnpm exec playwright codegen",
+        "start": "turbo run start"
     },
     "devDependencies": {
         "dotenv-cli": "latest",
